# dsil

./: .env.example  .gitignore  README.md  check_all.py  pyproject.toml  verify_final.py  verify_setup.py
dsil/: __init__.py  cli.py
dsil/core/: __init__.py  ai.py  context.py  evasion.py  pipeline.py  prompts.py  scope.py
dsil/discovery/: __init__.py  crawler.py  dedup.py  sources.py  subdomains.py
dsil/oob/: __init__.py  interactsh.py
dsil/report/: __init__.py  render.py  schemas.py
dsil/report/templates/: report.html.j2
dsil/sast/: __init__.py  analyzers.py
dsil/scanner/: __init__.py  base.py  executor.py  registry.py
dsil/scanner/tiers/: __init__.py  tier0.py  tier1.py  tier2.py  tier3.py  tier4.py  tier5.py
dsil/verify/: __init__.py  engine.py  rules.py
scripts/: smoke_test.py
