[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsil"
version = "0.1.0"
description = "Defensive Security Intelligence Lab"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "aiohttp>=3.9",
  "beautifulsoup4>=4.12",
  "jinja2>=3.1",
]

[project.scripts]
dsil = "dsil.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dsil*"]
